Fix Bug 1355072 - [nightly] First run page, has 2 vertical scrollbars if you change the window size.

--- a/media/css/firefox/nightly_firstrun.less
+++ b/media/css/firefox/nightly_firstrun.less
@@ -9,6 +9,10 @@ html {
     overflow-x: hidden;
 }
 
+body {
+    overflow-x: visible;
+}
+
 h1,
 h2,
 h3,
